# tissue-classifier

./: .gitignore  README.md  lab-notebook.md  plan.md  pyproject.toml  run_demo_batch.py
demo_data/: GENIE-MSK-P-0016546-T01-IM6.maf  GENIE-MSK-P-0016546-T01-IM6.seg  GENIE-MSK-P-0031532-T01-IM6.maf  GENIE-MSK-P-0031532-T01-IM6.seg  GENIE-MSK-P-0042600-T01-IM6.maf  GENIE-MSK-P-0042600-T01-IM6.seg  GENIE-MSK-P-0071028-T01-IM7.maf  GENIE-MSK-P-0071028-T01-IM7.seg  GENIE-MSK-P-0079362-T01-IM7.maf  GENIE-MSK-P-0079362-T01-IM7.seg  GENIE-MSK-P-0090767-T01-IM7.maf  GENIE-MSK-P-0090767-T01-IM7.seg  GENIE-UCSF-15252-7549T.maf  GENIE-UCSF-15252-7549T.seg  GENIE-UCSF-15399-6820T.maf  GENIE-UCSF-15399-6820T.seg  GENIE-UCSF-16316-7333T.maf  GENIE-UCSF-16316-7333T.seg  GENIE-UCSF-782801-63491T.maf  GENIE-UCSF-782801-63491T.seg
docker/: Dockerfile.deepsig
examples/: README.md  example_sample.maf  example_sample.seg
r_scripts/: deepsig.R
reference_data/: UsefulGenes.csv  all_enriched_mutations.json  class_labels.json  clinical_features.json  cna_features.json  deepsig_features.json  deepsig_ref.sig  feature_manifest.csv  gene_level_mutations.json  imputation_values.json  mutfreq_features.json  oncotree_mapping.csv  rare_mutation_groups.json  recurrent_mutations.json  recurrent_sv_labels.json  recurrent_tert_mutations.json  spectrum_features.json  tissue_specific_mutations.csv  top_50_genes.json  training_feature_order.json
tests/: conftest.py  test_cna.py  test_compiler.py  test_deepsig.py  test_e2e_real_samples.py  test_integration.py  test_mutations.py  test_spectrum.py
(+71 files in other folders)
