[project]
name = "tissue-classifier"
version = "0.1.0"
description = "Single-sample tissue-of-origin inference from genomic data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "autogluon-tabular>=1.2",
    "shap>=0.45",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyliftover>=0.4",
    "pydantic>=2.0",
    "catboost>=1.2",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]

[project.scripts]
tissue-classifier = "tissue_classifier.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tissue_classifier"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
